--- a/src/server/appsettings.json
+++ b/src/server/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Itch": {
+    "Api": "https://itch.io/api/1",
+    "AppUrl": "https://krekhuis.nl/gameoff2022/index.html",
+    "Authority": "https://itch.io/user/oauth",
+    "ClientId": "08d86a807d5c6c59bcc9b96258a16a7c"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
