--- a/src/game/.gitignore
+++ b/src/game/.gitignore
@@ -9,6 +9,7 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 /.idea/
+/[Dd]ist/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
