--- a/src/server/appsettings.Development.json
+++ b/src/server/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "Game": {
+    "Url": "https://krekhuis.nl/gameoff2022/index.html"
+  },
+  "Itch": {
+    "Api": "https://itch.io/api/1",
+    "Authority": "https://itch.io/user/oauth",
+    "ClientId": "08d86a807d5c6c59bcc9b96258a16a7c"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -15,7 +23,8 @@
       }
     }
   },
-  "Self": {
-    "HostingUrl": "https://localhost:5001"
+  "Server": {
+    "Host": "localhost",
+    "Url": "https://localhost:5001"
   }
 }
