--- a/src/server/appsettings.json
+++ b/src/server/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "AllowedHosts": "*",
+  "Game": {
+    "Url": "https://krekhuis.nl/gameoff2022/index.html"
+  },
   "Itch": {
     "Api": "https://itch.io/api/1",
-    "AppUrl": "https://krekhuis.nl/gameoff2022/index.html",
     "Authority": "https://itch.io/user/oauth",
     "ClientId": "08d86a807d5c6c59bcc9b96258a16a7c"
   },
@@ -11,5 +14,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5001"
+      }
+    }
+  },
+  "Server": {
+    "Host": "taintrocket.krekhuis.nl",
+    "Url": "https://taintrocket.krekhuis.nl"
+  }
 }
