the climb level

--- a/src/game/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/src/game/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -206,7 +206,7 @@
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "ShapeBuilder.ActiveShapeIndex",
-                "value": "{\"m_Value\":5}"
+                "value": "{\"m_Value\":3}"
             },
             {
                 "type": "System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -231,12 +231,12 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastPivotPosition",
-                "value": "{\"m_Value\":{\"x\":-2.125,\"y\":-2.7634005546569826,\"z\":2.375}}"
+                "value": "{\"m_Value\":{\"x\":-5.738956451416016,\"y\":-0.5301917791366577,\"z\":6.026863098144531}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":4.25,\"y\":5.526801109313965,\"z\":-4.75}}"
+                "value": "{\"m_Value\":{\"x\":11.477912902832032,\"y\":1.0603911876678467,\"z\":-12.053726196289063}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
